Acheived compilation of the java & kotlin "templates" sources.